--- a/index.css
+++ b/index.css
@@ -82,6 +82,11 @@
   padding: 5px;
 }
 
+.header {
+  width: 100%;
+  max-width: 350px;
+}
+
 img {
   background-color: white;
   position: absolute;
