--- a/index.css
+++ b/index.css
@@ -123,39 +123,33 @@ p {
   margin-right: 40px;
   line-height: 35px;
 }
-
 .icons{
   margin: 0;
   padding: 0;
-  overflow:auto;
+  overflow:visible;
 }
- .icons ol{
-  float : left;
-  font-size: 25px;
-  margin-left: 25px;
-}
-.icons a{
-  display:block;
+
+.icons-link{
+  display:inline-flex;
   color:rgb(57, 57, 58);
-  text-align:center;
-  padding-top:30px;
+  padding-top: 50px;
+  font-size: 25px;
   text-decoration: none;
-  
-}
+  }
 .icons a:hover{
   color: rgb(137, 241, 184);
 }
 .icons a:visited {
   color: rgb(44, 42, 48);
 }
- 
-//*@media only screen and (min-width: 1200px) {
+
+ /*@media only screen and (min-width: 1200px) {
    .navbar-links {
   font-size: 20px;
   color: black;
   margin-left: 30px;
   display: flex;
-  }
+  }/
 
 .dropdown {
   float: left;
@@ -189,3 +183,4 @@ p {
     z-index: -1;
   }
 }
+//*
