--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@
 
 main {
   text-align: center;
-  background: url("./image/header.png");
+  background: url("./image/header.svg");
   background-position: center top;
   background-size: cover;
   padding-top: 10%;
@@ -42,36 +42,36 @@ main {
 h1 {
   color: rgb(23, 43, 77);
   font-size: 2.5em;
-  margin-top: 8%;
+  margin-bottom: 2%;
 }
 
 h2 {
   color: rgb(63, 176, 107);
   font-size: 2.5em;
-  margin-top: 4%;
+  margin-top: 1%;
 }
 
-p {
-  line-height: 1.3rem;
-  margin-top: 2%;
-  width: 90%;
+.summary {
+  line-height: 1.5rem;
+  margin-top: 1%;
+  width: 40%;
 }
 
-footer {
+.intro-section {
   width: auto;
   height: 50px;
 }
 
-.navbar p footer {
+.margin-left-right-auto {
   margin-right: auto;
   margin-left: auto;
 }
 
-ul {
+.socials-list {
   list-style-type: none;
 }
 
-.links {
+.socials-lists-item {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -83,7 +83,7 @@ ul {
   margin-bottom: 10%;
 }
 
-.icons {
+.icon {
   width: 20px;
   padding: 0;
   margin: 0;
@@ -91,7 +91,7 @@ ul {
   transition: all 500ms ease-in-out;
 }
 
-.icons:hover {
+.icon:hover {
   transform: translate(0, 5px);
   transition: all 500ms ease-in-out;
   padding: 5px;
