--- a/index.css
+++ b/index.css
@@ -135,3 +135,134 @@ main {
   width: 25px;
   height: 25px;
 }
+
+.works {
+  background-color: rgba(255, 255, 255, 1);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.grid {
+  width: auto;
+  height: auto;
+  align-items: start;
+}
+
+.grid-item {
+  background-color: rgba(255, 255, 255, 1);
+  border: 8px solid #e5e5e5;
+  width: 28rem;
+  height: 40rem;
+  border-radius: 25px;
+  margin: 2.2rem;
+  overflow: hidden;
+  cursor: pointer;
+  transition: 0.2s;
+  box-shadow: 0 1rem 2rem;
+}
+
+.grid-item:hover {
+  transform: translateY(-0.5%);
+}
+
+.card {
+  box-sizing: border-box;
+  border-radius: 5%;
+  border: 5px;
+  margin: 1rem;
+  width: 26rem;
+  height: 38rem;
+}
+
+.card-img {
+  display: block;
+  border-radius: 5%;
+  width: 100%;
+  height: 17rem;
+  object-fit: cover;
+}
+
+.card-header {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #3a4a42;
+  margin: 1rem;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  font-style: normal;
+}
+
+.card-tags {
+  font-size: 0.9rem;
+  color: black;
+  background-color: #e5e5e5;
+  border-radius: 0.3rem;
+  height: 1rem;
+  width: 3rem;
+  margin: 1rem;
+  padding: 0.8rem;
+  display: flex;
+  float: left;
+  text-align: center;
+  justify-content: center;
+  letter-spacing: 0.01em;
+  flex-direction: row;
+  align-items: center;
+}
+
+.card-btn {
+  display: block;
+  width: 10rem;
+  padding: 1rem;
+  font-size: 1.3rem;
+  text-align: center;
+  color: white;
+  background-color: rgba(54, 179, 127, 1);
+  border: none;
+  border-radius: 0.4rem;
+  transition: 0.2s;
+  cursor: pointer;
+  margin: 8rem;
+}
+
+.about-header {
+  color: rgba(23, 43, 77, 1);
+  font-size: 40px;
+  margin-top: 120px;
+  margin-bottom: 20px;
+  font-style: normal;
+  font-weight: bold;
+  line-height: 52px;
+  text-align: center;
+  justify-content: center;
+}
+
+.about-text {
+  position: static;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 32px;
+  text-align: center;
+  justify-content: center;
+  color: #42526e;
+  padding: 20px;
+  margin: 2rem;
+}
+
+.about-btn {
+  display: block;
+  width: 11rem;
+  padding: 0.4rem;
+  font-size: 1.3rem;
+  color: white;
+  background-color: rgba(54, 179, 127, 1);
+  border: none;
+  border-radius: 0.4rem;
+  transition: 0.2s;
+  cursor: pointer;
+  margin-top: 3%;
+}
