--- a/index.css
+++ b/index.css
@@ -136,6 +136,28 @@ main {
   height: 25px;
 }
 
+.works-header {
+  position: static;
+  color: rgba(23, 43, 77, 1);
+  font-size: 40px;
+  font-style: normal;
+  font-weight: bold;
+  margin: 2rem 1rem;
+  text-align: center;
+  justify-content: center;
+  width: 97%;
+}
+
+.line {
+  width: 4rem;
+  height: 6px;
+  background-color: black;
+  display: inline-block;
+  position: relative;
+  margin: 0.1rem 46%;
+  margin-bottom: 3rem;
+}
+
 .works {
   background-color: rgba(255, 255, 255, 1);
   display: flex;
@@ -153,7 +175,7 @@ main {
 .grid-item {
   background-color: rgba(255, 255, 255, 1);
   border: 8px solid #e5e5e5;
-  width: 28rem;
+  width: 24rem;
   height: 40rem;
   border-radius: 25px;
   margin: 2.2rem;
@@ -171,7 +193,7 @@ main {
   box-sizing: border-box;
   border-radius: 5%;
   border: 5px;
-  margin: 1rem;
+  margin: 0.8rem;
   width: 26rem;
   height: 38rem;
 }
@@ -179,7 +201,7 @@ main {
 .card-img {
   display: block;
   border-radius: 5%;
-  width: 100%;
+  width: 85%;
   height: 17rem;
   object-fit: cover;
 }
@@ -188,7 +210,8 @@ main {
   font-size: 2rem;
   font-weight: 600;
   color: #3a4a42;
-  margin: 1rem;
+  margin-right: 2rem;
+  padding-top: 1rem;
   text-align: center;
   justify-content: center;
   align-items: center;
@@ -202,7 +225,7 @@ main {
   border-radius: 0.3rem;
   height: 1rem;
   width: 3rem;
-  margin: 1rem;
+  margin: 2rem  0.5rem;
   padding: 8px 12px;
   display: flex;
   float: left;
@@ -216,7 +239,7 @@ main {
 .card-btn {
   display: block;
   width: 10rem;
-  padding: 1rem;
+  padding: 1rem 1rem;
   font-size: 1.3rem;
   text-align: center;
   color: white;
@@ -225,7 +248,7 @@ main {
   border-radius: 0.4rem;
   transition: 0.2s;
   cursor: pointer;
-  margin: 8rem;
+  margin: 9rem 6rem;
 }
 
 .about-header {
@@ -255,8 +278,9 @@ main {
 
 .about-btn {
   display: block;
-  width: 11rem;
-  padding: 0.4rem;
+  width: 10rem;
+  height: 2rem;
+  padding: 1rem 1rem;
   font-size: 1.3rem;
   color: white;
   background-color: rgba(54, 179, 127, 1);
@@ -264,5 +288,6 @@ main {
   border-radius: 0.4rem;
   transition: 0.2s;
   cursor: pointer;
-  margin-top: 3%;
+  margin: 2rem  auto 2rem;
+  text-align: center;
 }
