--- a/index.css
+++ b/index.css
@@ -48,17 +48,17 @@ main {
 
 .heading {
   color: #172b4d;
-  font-size: 40px;
+  font-size: 50px;
   margin-top: 12%;
-  margin-bottom: 2%;
-  width: 80%;
+  margin-bottom: 3%;
+  width: 50%;
 }
 
 .subheading {
   color: #36b37e;
-  font-size: 40px;
-  margin-top: -1%;
-  width: 90%;
+  font-size: 50px;
+  margin-top: 2%;
+  width: 50%;
 }
 
 .summary {
@@ -139,23 +139,24 @@ main {
 .works-header {
   position: static;
   color: rgba(23, 43, 77, 1);
-  font-size: 40px;
+  font-size: 50px;
   font-style: normal;
   font-weight: bold;
-  margin: 2rem 1rem;
+  margin: 12% 25% 3%;
   text-align: center;
   justify-content: center;
-  width: 97%;
+  width: 55%;
 }
 
 .line {
-  width: 4rem;
-  height: 6px;
-  background-color: black;
+  width: 10%;
+  height: 9px;
+  background-color: rgba(54, 179, 127, 1);
   display: inline-block;
   position: relative;
-  margin: 0.1rem 46%;
+  margin: 3% 45%;
   margin-bottom: 3rem;
+  border-radius: 2px;
 }
 
 .works {
@@ -176,13 +177,12 @@ main {
   background-color: rgba(255, 255, 255, 1);
   border: 8px solid #e5e5e5;
   width: 24rem;
-  height: 40rem;
+  height: 35rem;
   border-radius: 25px;
   margin: 2.2rem;
   overflow: hidden;
   cursor: pointer;
   transition: 0.2s;
-  box-shadow: 0 1rem 2rem;
 }
 
 .grid-item:hover {
@@ -248,7 +248,15 @@ main {
   border-radius: 0.4rem;
   transition: 0.2s;
   cursor: pointer;
-  margin: 9rem 6rem;
+  margin: 7rem 6rem;
+}
+
+.about {
+  background: url("./image/about me 2.svg");
+  background-repeat: no-repeat;
+  background-position-x: right;
+  background-size: 7rem;
+  padding-top: 2%;
 }
 
 .about-header {
@@ -276,6 +284,14 @@ main {
   margin: 2rem;
 }
 
+.about2 {
+  background: url("./image/about me 1.svg");
+  background-repeat: no-repeat;
+  background-position-x: left;
+  background-size: 7rem;
+  padding: 8% 6%;
+}
+
 .about-btn {
   display: block;
   width: 10rem;
@@ -288,6 +304,74 @@ main {
   border-radius: 0.4rem;
   transition: 0.2s;
   cursor: pointer;
-  margin: 2rem  auto 2rem;
+  margin: 2rem auto  1rem;
   text-align: center;
+}
+
+.flex-container {
+  background-color: rgba(255, 255, 255, 1);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.flex-box {
+  background-color: rgba(235, 240, 238, 1);
+  border: 2px solid rgba(193, 199, 208, 1);
+  width: 24rem;
+  height: 25rem;
+  border-radius: 10px;
+  margin: -0.2rem;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.attributes {
+  list-style-type: none;
+}
+
+.attribute-items {
+  align-items: center;
+}
+
+.attribute-ellip {
+  position: static;
+  margin: 3em 10rem;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 20rem;
+  background-color: rgba(255, 255, 255, 1);
+}
+
+.attribute-img {
+  margin: 1rem 1.2rem;
+}
+
+.attribute-title {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 32px;
+  text-align: center;
+  color: rgba(52, 69, 99, 1);
+  margin-bottom: 1rem;
+}
+
+.attribute-tags {
+  font-size: 0.9rem;
+  color: rgba(54, 179, 126, 1);
+  background-color: rgba(255, 255, 255, 1);
+  border-radius: 0.3rem;
+  height: 1.5rem;
+  width: 3rem;
+  display: flex;
+  margin: 0.5rem 1rem  1rem 2rem;
+  padding: 8px 12px;
+  float: left;
+  text-align: center;
+  justify-content: center;
+  letter-spacing: 0.01em;
+  align-items: center;
+  flex-direction: row;
 }
