--- a/index.css
+++ b/index.css
@@ -51,14 +51,14 @@ main {
   font-size: 40px;
   margin-top: 12%;
   margin-bottom: 3%;
-  width: 50%;
+  width: 80%;
 }
 
 .subheading {
   color: #36b37e;
   font-size: 40px;
   margin-top: 2%;
-  width: 50%;
+  width: 70%;
 }
 
 .summary {
@@ -67,7 +67,6 @@ main {
   font-size: 20px;
   line-height: 28px;
   margin-top: 5%;
-  width: 70%;
 }
 
 .intro-section {
@@ -365,7 +364,7 @@ main {
 }
 
 .attribute-tags {
-  font-size: 0.9rem;
+  font-size: 12px;
   color: rgba(54, 179, 126, 1);
   background-color: rgba(255, 255, 255, 1);
   border-radius: 0.3rem;
