--- a/index.css
+++ b/index.css
@@ -67,6 +67,7 @@ main {
   font-size: 20px;
   line-height: 28px;
   margin-top: 5%;
+  width: 90%;
 }
 
 .intro-section {
@@ -141,7 +142,7 @@ main {
   font-size: 40px;
   font-style: normal;
   font-weight: bold;
-  margin: 12% 25% 3%;
+  margin: 12% 30% 3%;
   text-align: center;
   justify-content: center;
   width: 45%;
@@ -153,7 +154,7 @@ main {
   background-color: rgba(54, 179, 127, 1);
   display: inline-block;
   position: relative;
-  margin: 2% 45%;
+  margin: 2% 50%;
   margin-bottom: 5px;
   margin-top: 2px;
   border-radius: 2px;
