--- a/index.css
+++ b/index.css
@@ -29,7 +29,8 @@ main {
   text-align: center;
   background: url("./image/header.svg");
   background-position: center top;
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: contain;
   padding-top: 10%;
 }
 
@@ -142,10 +143,10 @@ main {
   font-size: 40px;
   font-style: normal;
   font-weight: bold;
-  margin: 12% 30% 3%;
+  margin: 12% 25% 3%;
   text-align: center;
   justify-content: center;
-  width: 45%;
+  width: 55%;
 }
 
 .line {
@@ -154,18 +155,17 @@ main {
   background-color: rgba(54, 179, 127, 1);
   display: inline-block;
   position: relative;
-  margin: 2% 50%;
-  margin-bottom: 5px;
+  margin: 2% 40%;
+  margin-bottom: 15px;
   margin-top: 2px;
   border-radius: 2px;
 }
 
 .works {
   background-color: rgba(255, 255, 255, 1);
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  display: grid;
+  grid-template-rows: auto auto auto auto auto auto;
+  row-gap: 45px;
 }
 
 .grid {
@@ -177,10 +177,10 @@ main {
 .grid-item {
   background-color: rgba(255, 255, 255, 1);
   border: 8px solid #e5e5e5;
-  width: 20rem;
-  height: 32rem;
+  width: 90%;
+  height: 90%;
   border-radius: 25px;
-  margin: 2.2rem;
+  margin: auto;
   overflow: hidden;
   cursor: pointer;
   transition: 0.2s;
@@ -192,28 +192,37 @@ main {
 
 .card {
   box-sizing: border-box;
-  border-radius: 3%;
   border: 5px;
-  margin: 0.8rem;
-  width: 26rem;
-  height: 40rem;
+  width: 100%;
+  height: 88%;
+  margin-bottom: 5px;
 }
 
 .card-img {
   display: block;
-  border-radius: 5%;
-  width: 70%;
-  height: 17rem;
+  width: 100%;
+  height: 70%;
   object-fit: cover;
+}
+
+.card-content {
+  position: sticky;
+  box-sizing: border-box;
+  border: 5px;
+  width: 100%;
+  height: 100%;
+  margin-left: 2%;
+  background: white;
+  list-style-type: none;
 }
 
 .card-header {
   font-size: 24px;
-  width: 70%;
+  width: 100%;
   font-weight: 600;
-  color: #3a4a42;
-  margin-left: 5px;
-  padding-top: 10px;
+  color: rgb(58, 74, 66);
+  margin-left: auto;
+  padding-top: 30px;
   text-align: center;
   justify-content: center;
   font-style: normal;
@@ -222,34 +231,34 @@ main {
 .card-tags {
   font-size: 12px;
   color: black;
-  background-color: #e5e5e5;
-  border-radius: 0.3rem;
+  background-color: rgb(229, 229, 229);
   height: 1rem;
   width: 3rem;
-  margin: 2rem  0.5rem;
-  padding: 8px 5px;
-  display: flex;
   float: left;
   text-align: center;
-  justify-content: center;
-  letter-spacing: 0.01em;
+  display: flex;
   flex-direction: row;
-  align-items: center;
+  letter-spacing: 0.03em;
+  border-radius: 4px;
+  margin: 4% 5% 3%;
+  padding: 2% 3% 2% 4%;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 16px;
 }
 
 .card-btn {
   display: block;
-  width: 7rem;
-  padding: 1rem 1rem;
+  width: 30%;
   font-size: 17px;
   text-align: center;
   color: rgb(250, 246, 246);
-  background-color: rgba(54, 179, 127, 1);
-  border: none;
-  border-radius: 0.4rem;
-  transition: 0.2s;
+  background-color: rgb(54, 179, 127);
   cursor: pointer;
-  margin: 5rem 5rem;
+  padding: 2%;
+  border-radius: 0.4rem;
+  transition: all 0.2s ease 0s;
+  margin: auto;
 }
 
 .about {
@@ -311,38 +320,29 @@ main {
 .flex-container {
   background-color: rgba(255, 255, 255, 1);
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
+  column-gap: 45%;
   justify-content: space-around;
 }
 
 .flex-box {
   background-color: rgba(235, 240, 238, 1);
   border: 2px solid rgba(193, 199, 208, 1);
-  width: 20rem;
-  height: 22rem;
+  width: 90%;
+  height: 20rem;
   border-radius: 10px;
-  margin: 1.5rem;
+  margin: auto;
   overflow: hidden;
   cursor: pointer;
   text-align: center;
   justify-content: center;
   align-items: center;
-}
-
-.attributes {
-  list-style-type: none;
-}
-
-.attribute-items {
-  align-items: center;
-  text-align: center;
-  justify-content: center;
+  margin-bottom: 10%;
 }
 
 .attribute-ellip {
   position: static;
-  margin: 3em 7rem;
+  margin: 2em auto;
   width: 5rem;
   height: 5rem;
   border-radius: 20rem;
@@ -365,19 +365,21 @@ main {
 }
 
 .attribute-tags {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
   font-size: 12px;
   color: rgba(54, 179, 126, 1);
   background-color: rgba(255, 255, 255, 1);
   border-radius: 0.3rem;
   height: 1.5rem;
   width: 3rem;
-  display: flex;
-  margin: 0.5rem 1rem  1rem 1rem;
   padding: 8px 8px;
   float: left;
   letter-spacing: 0.01em;
   text-align: center;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
+  justify-content: space-around;
+  margin-right: 9%;
+  margin-left: 5%;
+  margin-bottom: 2%;
 }
