--- a/index.css
+++ b/index.css
@@ -218,9 +218,9 @@ main {
 
 .card-header {
   font-size: 24px;
-  width: 100%;
+  width: 90%;
   font-weight: 600;
-  color: rgb(58, 74, 66);
+  color: rgb(58, 74, 66);  
   margin-left: auto;
   padding-top: 30px;
   text-align: center;
@@ -228,34 +228,50 @@ main {
   font-style: normal;
 }
 
+ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
 .card-tags {
   font-size: 12px;
   color: black;
   background-color: rgb(229, 229, 229);
-  height: 1rem;
-  width: 3rem;
+  height: 3%;
+  width: 5%;
   float: left;
   text-align: center;
   display: flex;
   flex-direction: row;
   letter-spacing: 0.03em;
   border-radius: 4px;
-  margin: 4% 5% 3%;
-  padding: 2% 3% 2% 4%;
+  margin-right: 4%;
+  margin-left: 6%;
+  margin-top: 4%;
+  margin-bottom: 3%;
+  padding-top: 1%;
+  padding-right: 3%;
+  padding-bottom: 2%;
+  padding-left: 3%;
+  font-size: 12px;
   font-style: normal;
   font-weight: 600;
   line-height: 16px;
+
+  
+  
 }
 
 .card-btn {
   display: block;
-  width: 30%;
+  width: 20%;
   font-size: 17px;
   text-align: center;
   color: rgb(250, 246, 246);
   background-color: rgb(54, 179, 127);
   cursor: pointer;
-  padding: 2%;
+  padding: 1%;
   border-radius: 0.4rem;
   transition: all 0.2s ease 0s;
   margin: auto;
