--- a/index.css
+++ b/index.css
@@ -206,13 +206,13 @@ main {
 }
 
 .card-header {
+  display: block;
   font-size: 140%;
   width: 100%;
   height: 10%;
   font-weight: 600;
   color: rgb(58, 74, 66);
   margin-left: auto;
-  padding-top: 30px;
   text-align: center;
   justify-content: center;
   font-style: normal;
@@ -260,7 +260,7 @@ ul {
 }
 
 .content-btn {
-  width: 79%;
+  width: 50%;
   margin-bottom: 5%;
   border-radius: 4px;
   padding: 2%;
@@ -383,12 +383,11 @@ ul {
   background-color: rgba(255, 255, 255, 1);
   border-radius: 0.3rem;
   height: 1.5rem;
-  width: 9%;
+  width: 7%;
   padding: 8px 8px;
   float: left;
   letter-spacing: 0.01em;
   justify-content: space-around;
-  margin-right: 9%;
-  margin-left: 5%;
+  margin-left: 10%;
   margin-bottom: 2%;
 }
