--- a/index.css
+++ b/index.css
@@ -208,11 +208,11 @@ main {
 .card-header {
   display: block;
   font-size: 140%;
-  width: 100%;
+  width: 30%;
   height: 10%;
   font-weight: 600;
   color: rgb(58, 74, 66);
-  margin-left: auto;
+  margin: auto;
   text-align: center;
   justify-content: center;
   font-style: normal;
@@ -255,13 +255,14 @@ ul {
 .see-projects {
   text-decoration: none;
   text-align: center;
-  margin-top: 5px;
+  margin-top: 10px;
   border: 0;
 }
 
 .content-btn {
-  width: 50%;
-  margin-bottom: 5%;
+  width: 20%;
+  margin-top: 10%;
+  margin-bottom: 7%;
   border-radius: 4px;
   padding: 2%;
   background: rgba(54, 179, 127, 1);
@@ -360,6 +361,12 @@ ul {
 
 .attribute-img {
   margin: 1rem 1.2rem;
+}
+
+.attri-content {
+ padding: 0;
+ margin: 0;
+ list-style-type: none;
 }
 
 .attribute-title {
