--- a/index.css
+++ b/index.css
@@ -208,8 +208,8 @@ main {
 .card-header {
   display: block;
   font-size: 140%;
-  width: 30%;
-  height: 10%;
+  width: 50%;
+  height: 20%;
   font-weight: 600;
   color: rgb(58, 74, 66);
   margin: auto;
@@ -364,9 +364,9 @@ ul {
 }
 
 .attri-content {
- padding: 0;
- margin: 0;
- list-style-type: none;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
 }
 
 .attribute-title {
@@ -391,10 +391,13 @@ ul {
   border-radius: 0.3rem;
   height: 1.5rem;
   width: 7%;
-  padding: 8px 8px;
+  padding-top: 2%;
+  padding-right: 3%;
+  padding-bottom: 2%;
+  padding-left: 3%;
   float: left;
   letter-spacing: 0.01em;
   justify-content: space-around;
-  margin-left: 10%;
-  margin-bottom: 2%;
+  margin-left: 5%;
+  margin-bottom: 7%;
 }
