--- a/index.css
+++ b/index.css
@@ -209,7 +209,7 @@ main {
   display: block;
   font-size: 140%;
   width: 80%;
-  height: 13%;
+  height: 10%;
   font-weight: 600;
   color: rgb(58, 74, 66);
   margin: auto;
@@ -250,7 +250,8 @@ ul {
   line-height: 16px;
   letter-spacing: 0.03em;
   text-align: left;
-  width: 14%;
+  width: 15%;
+  height: 1.5rem;
 }
 
 .see-projects {
@@ -391,7 +392,7 @@ ul {
   background-color: rgba(255, 255, 255, 1);
   border-radius: 0.3rem;
   height: 1.5rem;
-  width: 9%;
+  width: 10%;
   padding-top: 2%;
   padding-right: 3%;
   padding-bottom: 2%;
