--- a/index.css
+++ b/index.css
@@ -29,7 +29,8 @@ main {
   text-align: center;
   background: url("./image/header.svg");
   background-position: center top;
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: contain;
   padding-top: 10%;
 }
 
@@ -50,15 +51,15 @@ main {
   color: #172b4d;
   font-size: 40px;
   margin-top: 12%;
-  margin-bottom: 2%;
+  margin-bottom: 3%;
   width: 80%;
 }
 
 .subheading {
   color: #36b37e;
   font-size: 40px;
-  margin-top: -1%;
-  width: 90%;
+  margin-top: 2%;
+  width: 70%;
 }
 
 .summary {
@@ -67,7 +68,7 @@ main {
   font-size: 20px;
   line-height: 28px;
   margin-top: 5%;
-  width: 64%;
+  width: 90%;
 }
 
 .intro-section {
@@ -134,4 +135,271 @@ main {
 .githubsize {
   width: 25px;
   height: 25px;
+}
+
+.works-header {
+  position: static;
+  color: rgba(23, 43, 77, 1);
+  font-size: 40px;
+  font-style: normal;
+  font-weight: bold;
+  margin: 12% 25% 3%;
+  text-align: center;
+  justify-content: center;
+  width: 55%;
+}
+
+.line {
+  width: 6%;
+  height: 9px;
+  background-color: rgba(54, 179, 127, 1);
+  display: inline-block;
+  position: relative;
+  margin: 2% 40%;
+  margin-bottom: 15px;
+  margin-top: 2px;
+  border-radius: 2px;
+}
+
+.works {
+  background-color: rgba(255, 255, 255, 1);
+  display: grid;
+  grid-template-rows: auto auto auto auto auto auto;
+  row-gap: 45px;
+}
+
+.grid {
+  width: auto;
+  height: auto;
+  align-items: start;
+}
+
+.grid-item {
+  background-color: rgba(255, 255, 255, 1);
+  border: 2px solid #e5e5e5;
+  width: 90%;
+  height: 90%;
+  border-radius: 25px;
+  margin: auto;
+  overflow: hidden;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.grid-item:hover {
+  transform: translateY(-0.5%);
+}
+
+.card {
+  box-sizing: border-box;
+  border: 5px;
+  width: 100%;
+  height: 88%;
+  margin-bottom: 5px;
+}
+
+.card-img {
+  display: block;
+  width: 100%;
+  height: 70%;
+  object-fit: cover;
+}
+
+.card-header {
+  display: block;
+  font-size: 140%;
+  width: 80%;
+  height: 8%;
+  font-weight: 600;
+  color: rgb(58, 74, 66);
+  margin: auto;
+  text-align: center;
+  justify-content: center;
+  font-style: normal;
+  line-height: 32px;
+}
+
+.card-content {
+  display: flex;
+  width: 96%;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.content-tags {
+  border-radius: 4px;
+  margin-top: 13px;
+  margin-bottom: 10px;
+  background: rgba(235, 240, 238, 1);
+  padding-top: 2%;
+  padding-right: 3%;
+  padding-bottom: 2%;
+  padding-left: 3%;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-align: left;
+  width: 15%;
+  height: 1.5rem;
+}
+
+.see-projects {
+  text-decoration: none;
+  text-align: center;
+  margin-top: 10px;
+  border: 0;
+}
+
+.content-btn {
+  width: 20%;
+  margin-top: 10%;
+  margin-bottom: 7%;
+  border-radius: 4px;
+  padding: 2%;
+  background: rgba(54, 179, 127, 1);
+  align-items: center;
+  color: white;
+}
+
+.about {
+  background: url("./image/about me 2.svg");
+  background-repeat: no-repeat;
+  background-position-x: right;
+  background-size: 4rem;
+  padding-top: 2%;
+}
+
+.about-header {
+  color: rgba(23, 43, 77, 1);
+  font-size: 40px;
+  margin-top: 120px;
+  margin-bottom: 20px;
+  font-style: normal;
+  font-weight: bold;
+  line-height: 52px;
+  text-align: center;
+  justify-content: center;
+}
+
+.about-text {
+  position: static;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 32px;
+  text-align: center;
+  justify-content: center;
+  color: #42526e;
+  padding: 20px;
+}
+
+.about2 {
+  background: url("./image/about me 1.svg");
+  background-repeat: no-repeat;
+  background-position-x: left;
+  background-size: 4rem;
+  padding: 8% 6%;
+}
+
+.about-btn {
+  display: block;
+  width: 10rem;
+  height: 2rem;
+  padding: 1rem 1rem;
+  font-size: 1.3rem;
+  color: white;
+  background-color: rgba(54, 179, 127, 1);
+  border: none;
+  border-radius: 0.4rem;
+  transition: 0.2s;
+  cursor: pointer;
+  margin: 2rem auto  1rem;
+  text-align: center;
+}
+
+.flex-container {
+  background-color: rgba(255, 255, 255, 1);
+  display: flex;
+  flex-direction: column;
+  column-gap: 45%;
+  justify-content: space-around;
+}
+
+.flex-box {
+  background-color: rgba(235, 240, 238, 1);
+  border: 2px solid rgba(193, 199, 208, 1);
+  width: 90%;
+  height: 20rem;
+  border-radius: 10px;
+  margin: auto;
+  overflow: hidden;
+  cursor: pointer;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10%;
+}
+
+.attribute-ellip {
+  position: static;
+  margin: 2em auto;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 20rem;
+  background-color: rgba(255, 255, 255, 1);
+  align-items: center;
+}
+
+.attribute-img {
+  margin: 1rem 1.2rem;
+}
+
+.attri-content {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+.attribute-title {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 32px;
+  text-align: center;
+  color: rgba(52, 69, 99, 1);
+  margin-bottom: 1rem;
+}
+
+.attribute-tags {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  font-size: 12px;
+  flex-wrap: wrap;
+  text-align: center;
+  color: rgba(54, 179, 126, 1);
+  background-color: rgba(255, 255, 255, 1);
+  border-radius: 0.3rem;
+  height: 1.5rem;
+  width: 10%;
+  padding-top: 2%;
+  padding-right: 3%;
+  padding-bottom: 2%;
+  padding-left: 3%;
+  float: left;
+  letter-spacing: 0.01em;
+  justify-content: space-around;
+  margin-left: 3%;
+  margin-bottom: 7%;
 }
