--- a/index.css
+++ b/index.css
@@ -403,3 +403,81 @@ ul {
   margin-left: 3%;
   margin-bottom: 7%;
 }
+
+.contact {
+  background-color: rgba(255, 255, 255, 1);
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.contact-text {
+  width: 60%;
+  height: 363px;
+  font-style: normal;
+  text-align: center;
+  justify-content: center;
+  padding: 20px;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 52px;
+  color: #172b4d;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  margin: 24px auto;
+  margin-bottom: 30px;
+}
+
+input[type=text] {
+  width: 90%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 18px;
+  margin-bottom: 12px;
+  resize: vertical;
+}
+
+.form-container {
+  border-radius: 5px;
+  background-color: white;
+  padding: 20px;
+}
+
+textarea {
+  height: 200px;
+  border: 1px solid#60c095;
+  width: 90%;
+  padding: 12px;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 18px;
+  margin-bottom: 12px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  background: #36b37f;
+  width: 129px;
+  height: 48px;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.contact-img {
+  background: url("./image/contact.svg");
+  background-repeat: no-repeat;
+  background-position-x: right;
+  background-size: 5%;
+  padding-top: 30%;
+}
