--- a/index.css
+++ b/index.css
@@ -475,9 +475,57 @@ input[type=submit]:hover {
 }
 
 .contact-img {
+  position: static;
   background: url("./image/contact.svg");
   background-repeat: no-repeat;
   background-position-x: right;
-  background-size: 5%;
-  padding-top: 30%;
+  background-size: 4rem;
+  padding: 8% 6%;
+}
+
+.socials-lists-item-after {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 50%;
+  margin: auto;
+  height: 100%;
+}
+
+p {
+  margin-top: 20px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 32px;
+  text-align: center;
+  color: rgba(66, 82, 110, 1);
+  margin-bottom: 30%;
+}
+
+a:link {
+  text-decoration: none;
+  color: rgba(66, 82, 110, 1);
+}
+
+a:visited {
+  text-decoration: none;
+  color: rgba(66, 82, 110, 1);
+}
+
+a:hover {
+  text-decoration: underline;
+  color: rgba(66, 82, 110, 1);
+}
+
+.line2 {
+  width: 20%;
+  height: 9px;
+  background-color: rgba(54, 179, 127, 1);
+  display: inline-block;
+  position: relative;
+  margin: 2% 40%;
+  margin-bottom: 12px;
+  margin-top: 2px;
+  border-radius: 2px;
 }
