--- a/index.css
+++ b/index.css
@@ -447,6 +447,17 @@ input[type=text] {
   padding: 20px;
 }
 
+input[type=email] {
+  width: 90%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 18px;
+  margin-bottom: 12px;
+  resize: vertical;
+}
+
 textarea {
   height: 200px;
   border: 1px solid#60c095;
