--- a/index.css
+++ b/index.css
@@ -139,7 +139,7 @@ main {
 
 .works-header {
   position: static;
-  color: rgba(23, 43, 77, 1);
+  color: #172b4d;
   font-size: 40px;
   font-style: normal;
   font-weight: bold;
@@ -152,7 +152,7 @@ main {
 .line {
   width: 6%;
   height: 9px;
-  background-color: rgba(54, 179, 127, 1);
+  background-color: #36b37f;
   display: inline-block;
   position: relative;
   margin: 2% 40%;
@@ -162,7 +162,7 @@ main {
 }
 
 .works {
-  background-color: rgba(255, 255, 255, 1);
+  background-color: #ffff;
   display: grid;
   grid-template-rows: auto auto auto auto auto auto;
   row-gap: 45px;
@@ -175,8 +175,8 @@ main {
 }
 
 .grid-item {
-  background-color: rgba(255, 255, 255, 1);
-  border: 2px solid #e5e5e5;
+  background-color: #ffff;
+  border: 2px solid #ffff;
   width: 90%;
   height: 90%;
   border-radius: 25px;
@@ -211,7 +211,7 @@ main {
   width: 80%;
   height: 8%;
   font-weight: 600;
-  color: rgb(58, 74, 66);
+  color: #3a4a42;
   margin: auto;
   text-align: center;
   justify-content: center;
@@ -239,7 +239,7 @@ ul {
   border-radius: 4px;
   margin-top: 13px;
   margin-bottom: 10px;
-  background: rgba(235, 240, 238, 1);
+  background: #ffff;
   padding-top: 2%;
   padding-right: 3%;
   padding-bottom: 2%;
@@ -267,9 +267,9 @@ ul {
   margin-bottom: 7%;
   border-radius: 4px;
   padding: 2%;
-  background: rgba(54, 179, 127, 1);
+  background: #36b37f;
   align-items: center;
-  color: white;
+  color: #ffff;
 }
 
 .about {
@@ -281,7 +281,7 @@ ul {
 }
 
 .about-header {
-  color: rgba(23, 43, 77, 1);
+  color: #172b4d;
   font-size: 40px;
   margin-top: 120px;
   margin-bottom: 20px;
@@ -318,8 +318,8 @@ ul {
   height: 2rem;
   padding: 1rem 1rem;
   font-size: 1.3rem;
-  color: white;
-  background-color: rgba(54, 179, 127, 1);
+  color: #ffff;
+  background-color: #36b37f;
   border: none;
   border-radius: 0.4rem;
   transition: 0.2s;
@@ -329,7 +329,7 @@ ul {
 }
 
 .flex-container {
-  background-color: rgba(255, 255, 255, 1);
+  background-color: #ffff;
   display: flex;
   flex-direction: column;
   column-gap: 45%;
@@ -337,8 +337,8 @@ ul {
 }
 
 .flex-box {
-  background-color: rgba(235, 240, 238, 1);
-  border: 2px solid rgba(193, 199, 208, 1);
+  background-color: #ffff;
+  border: 2px solid #ffff;
   width: 90%;
   height: 20rem;
   border-radius: 10px;
@@ -357,7 +357,7 @@ ul {
   width: 5rem;
   height: 5rem;
   border-radius: 20rem;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: #ffff;
   align-items: center;
 }
 
@@ -377,7 +377,7 @@ ul {
   font-size: 24px;
   line-height: 32px;
   text-align: center;
-  color: rgba(52, 69, 99, 1);
+  color: #344563;
   margin-bottom: 1rem;
 }
 
@@ -388,8 +388,8 @@ ul {
   font-size: 12px;
   flex-wrap: wrap;
   text-align: center;
-  color: rgba(54, 179, 126, 1);
-  background-color: rgba(255, 255, 255, 1);
+  color: #36b37e;
+  background-color: #d0d9d4;
   border-radius: 0.3rem;
   height: 1.5rem;
   width: 10%;
@@ -405,7 +405,7 @@ ul {
 }
 
 .contact {
-  background-color: rgba(255, 255, 255, 1);
+  background-color: #d0d9d4;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -443,7 +443,7 @@ input[type=text] {
 
 .form-container {
   border-radius: 5px;
-  background-color: white;
+  background-color: #d0d9d4;
   padding: 20px;
 }
 
@@ -511,29 +511,29 @@ p {
   font-size: 20px;
   line-height: 32px;
   text-align: center;
-  color: rgba(66, 82, 110, 1);
+  color: #42526e;
   margin-bottom: 30%;
 }
 
 a:link {
   text-decoration: none;
-  color: rgba(66, 82, 110, 1);
+  color: #42526e;
 }
 
 a:visited {
   text-decoration: none;
-  color: rgba(66, 82, 110, 1);
+  color: #42526e;
 }
 
 a:hover {
   text-decoration: underline;
-  color: rgba(66, 82, 110, 1);
+  color: #42526e;
 }
 
 .line2 {
   width: 20%;
   height: 9px;
-  background-color: rgba(54, 179, 127, 1);
+  background-color: #131414;
   display: inline-block;
   position: relative;
   margin: 2% 40%;
