--- a/index.css
+++ b/index.css
@@ -69,6 +69,7 @@ main {
   line-height: 28px;
   margin-top: 5%;
   width: 90%;
+  color: #172b4d;
 }
 
 .intro-section {
@@ -135,6 +136,16 @@ main {
 .githubsize {
   width: 25px;
   height: 25px;
+}
+
+.vector-img {
+  margin-top: 10%;
+  cursor: pointer;
+  width: 7%;
+}
+
+.vector-img:hover {
+  color: #45a049;
 }
 
 .works-header {
@@ -300,7 +311,7 @@ ul {
   line-height: 32px;
   text-align: center;
   justify-content: center;
-  color: #42526e;
+  color: #172b4d;
   padding: 20px;
   margin-bottom: 40px;
 }
