--- a/index.css
+++ b/index.css
@@ -141,7 +141,7 @@ main {
 .vector-img {
   margin-top: 10%;
   cursor: pointer;
-  width: 7%;
+  width: 5%;
 }
 
 .vector-img:hover {
@@ -174,9 +174,10 @@ main {
 
 .works {
   background-color: rgba(255, 255, 255, 1);
-  display: grid;
-  grid-template-rows: auto auto auto auto auto auto;
-  row-gap: 45px;
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: nowrap;
+  justify-content: space-around;
 }
 
 .grid {
@@ -186,6 +187,7 @@ main {
 }
 
 .grid-item {
+  display: inline-block;
   background-color: rgba(255, 255, 255, 1);
   border: 2px solid #e5e5e5;
   width: 90%;
@@ -343,15 +345,14 @@ ul {
 .flex-container {
   background-color: rgba(255, 255, 255, 1);
   display: flex;
+  flex-wrap: nowrap;
   flex-direction: column;
-  column-gap: 45%;
-  justify-content: space-around;
 }
 
 .flex-box {
   background-color: rgba(235, 240, 238, 1);
   border: 2px solid rgba(193, 199, 208, 1);
-  width: 90%;
+  width: 70%;
   height: 20rem;
   border-radius: 10px;
   margin: auto;
@@ -420,16 +421,16 @@ ul {
   background-color: #ffff;
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-around;
 }
 
 .contact-text {
-  width: 60%;
-  height: 363px;
+  width: 40%;
+  height: 3px;
   font-style: normal;
-  text-align: center;
-  justify-content: center;
+  text-align: left;
+  justify-content: left;
   padding: 20px;
   font-weight: bold;
   font-size: 40px;
@@ -439,11 +440,10 @@ ul {
   order: 0;
   flex-grow: 0;
   margin: 24px auto;
-  margin-bottom: 30px;
 }
 
 input[type=text] {
-  width: 90%;
+  width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -453,14 +453,8 @@ input[type=text] {
   resize: vertical;
 }
 
-.form-container {
-  border-radius: 5px;
-  background-color: white;
-  padding: 20px;
-}
-
 input[type=email] {
-  width: 90%;
+  width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -473,7 +467,7 @@ input[type=email] {
 textarea {
   height: 200px;
   border: 1px solid #60c095;
-  width: 90%;
+  width: 100%;
   padding: 12px;
   border-radius: 4px;
   box-sizing: border-box;
